исправил проблему с cookie
